--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,14 +15,16 @@
       android:supportsRtl="true">
        <meta-data
      android:name="com.google.android.geo.API_KEY"
-     android:value="AIzaSyDwK5Xp8GFmWZ1yTpOin7Ma2gFLXxpIqhM"/>
+     android:value="AIzaSyDvYJCIl0WDbNQEA0LQewjcnSJq1hye_cw"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
-        android:exported="true">
+        android:exported="true"
+        android:screenOrientation="portrait"
+        >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
